[tool.poetry]
name = "vnguide-action-log-2"
version = "0.1.0"
description = ""
authors = ["dungpq <dungphanquang@vccorp.vn>"]
readme = "README.md"
packages = [{include = "vnguide_action_log_2"}]

[tool.poetry.dependencies]
python = "^3.10"
clean-architecture = {git = "ssh://git@github.com/milkandpie/clean_architecture.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
